--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -18,11 +18,13 @@
     "@sendgrid/mail": "^7.7.0",
     "@slack/webhook": "^6.1.0",
     "@upstash/redis": "^1.34.4",
+    "@upstash/qstash": "^2.7.23",
+    "@upstash/workflow": "^0.2.12",
     "ai": "^4.3.9",
     "api": "^5.0.7",
     "axios": "^1.3.3",
-    "firebase-admin": "^12.2.0",
-    "firebase-functions": "^5.0.1",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "genkit": "^0.9.12",
     "googleapis": "^140.0.1",
     "ioredis": "^5.4.2",
@@ -31,7 +33,11 @@
     "openai": "^4.20.1",
     "redis": "^4.7.0",
     "seamailer-nodejs": "^1.1.6",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "@ai-sdk/openai": "^1.1.9",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
