--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@genkit-ai/googleai": "^0.9.12",
     "@google/generative-ai": "^0.21.0",
     "@iconify/vue": "^4.3.0",
+    "@nuxt/kit": "^3.17.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tiptap/extension-color": "^2.7.4",
