--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@firebasegen/default-connector": "link:dataconnect-generated/js/default-connector",
     "@genkit-ai/googleai": "^0.9.12",
     "@google/generative-ai": "^0.21.0",
+    "@headlessui/vue": "^1.7.23",
     "@iconify/vue": "^4.3.0",
     "@nuxt/kit": "^3.17.2",
     "@tailwindcss/container-queries": "^0.1.1",
