--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -23,6 +23,7 @@
     "ai": "^4.3.9",
     "api": "^5.0.7",
     "axios": "^1.3.3",
+    "convex": "^1.12.1",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
     "genkit": "^0.9.12",
