--- a/backend/functions/tsconfig.json
+++ b/backend/functions/tsconfig.json
@@ -8,10 +8,10 @@
     "noImplicitReturns": false,
     "noUnusedLocals": true,
     "outDir": "lib",
-    "sourceMap": true,
     "strict": true,
     "target": "es2017",
     "noEmit": false,
+    "sourceMap": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
@@ -19,5 +19,11 @@
   "include": [
     "src/**/*",
     "vercel-ai.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "lib",
+    "convex",
+    "src/convex"
   ]
 }
