Update Firebase export metadata versions to 14.2.1; modify auth export accounts JSON to reflect updated last login timestamp; delete unused storage blobs and metadata files; adjust TypeScript configuration to exclude unnecessary files; enhance AI model references in various functions; add Gmail integration tools and update related components for improved email handling.

--- a/backend/functions/convex/src/tsconfig.json
+++ b/backend/functions/convex/src/tsconfig.json
@@ -22,10 +22,8 @@
     "noEmit": true,
     "sourceMap": false,
   },
-  "include": [
-    "./**/*"
-  ],
   "exclude": [
-    "./_generated"
+    "/_generated",
+    "/**/*.ts"
   ]
 }
