--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,15 +15,19 @@
   "main": "lib/index.js",
   "dependencies": {
     "@ai-sdk/google": "^1.2.12",
+    "@ai-sdk/openai": "^1.1.9",
+    "@composio/core": "^0.1.36-next.10",
     "@sendgrid/mail": "^7.7.0",
     "@slack/webhook": "^6.1.0",
-    "@upstash/redis": "^1.34.4",
     "@upstash/qstash": "^2.7.23",
+    "@upstash/redis": "^1.34.4",
     "@upstash/workflow": "^0.2.12",
     "ai": "^4.3.9",
     "api": "^5.0.7",
     "axios": "^1.3.3",
     "convex": "^1.12.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
     "genkit": "^0.9.12",
@@ -35,9 +39,6 @@
     "redis": "^4.7.0",
     "seamailer-nodejs": "^1.1.6",
     "uuid": "^10.0.0",
-    "@ai-sdk/openai": "^1.1.9",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
