Implement comprehensive Gmail integration using Composio, including tools for sending, reading, and creating drafts of emails. Update environment variables and documentation to reflect the new integration setup. Refactor existing components and composables to support the Composio framework, enhancing error handling and connection management. Remove legacy Gmail tools and streamline the integration process for improved user experience.

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -14,8 +14,16 @@ FIREBASE_AUTH_EMULATOR_HOST=
 FIRESTORE_EMULATOR_HOST=
 MODE=
 VITE_BASE_URL=
+
+# Google OAuth Credentials (Alternative to Composio)
 G_AUTH_CLIENT_ID=
 G_AUTH_CLIENT_SECRET=
+
+# Composio API Keys (Current Gmail Integration)
+COMPOSIO_API_KEY_DEV=
+COMPOSIO_API_KEY_PROD=
+COMPOSIO_REDIRECT_URL=https://app.composio.dev/redirect
+
 VITE_GA_ID=
 GEMINI_API_KEY=
 
