Add Playwright integration for web content fetching and enhance action nodes
- Introduced Playwright for automated web interactions and content extraction.
- Added `fetchWebContentNode` for fetching and processing webpage content.
- Updated action nodes to include web-related functionalities.
- Modified Gmail setup for improved configuration handling.
- Enhanced WhatsApp message sending with additional logging.
- Updated package dependencies to include Playwright.

--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -36,6 +36,7 @@
     "moment-timezone": "^0.5.45",
     "node-fetch": "^2.6.7",
     "openai": "^4.20.1",
+    "playwright": "^1.54.1",
     "redis": "^4.7.0",
     "seamailer-nodejs": "^1.1.6",
     "uuid": "^10.0.0",
