--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -19,6 +19,7 @@
     "@composio/core": "^0.1.36-next.13",
     "@sendgrid/mail": "^7.7.0",
     "@slack/webhook": "^6.1.0",
+    "@sparticuz/chromium": "^138.0.1",
     "@upstash/qstash": "^2.7.23",
     "@upstash/redis": "^1.34.4",
     "@upstash/workflow": "^0.2.12",
