--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -40,6 +40,7 @@
     "node-fetch": "^2.6.7",
     "openai": "^4.20.1",
     "playwright": "^1.54.1",
+    "posthog-node": "^5.6.0",
     "redis": "^4.7.0",
     "seamailer-nodejs": "^1.1.6",
     "uuid": "^10.0.0",
