--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -14,7 +14,8 @@
     ],
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    ],
+    "timeoutSeconds": 540
   },
   "storage": {
     "rules": "storage.rules"
