refactor: Remove Convex integration and migrate to Upstash for search functionality
- Deleted Convex-related files and functions, including agents, flows, tables, and users sync logic, to streamline the backend architecture.
- Implemented Upstash for search operations, replacing Convex queries with direct database interactions for improved performance and simplicity.
- Updated relevant frontend components to reflect the removal of Convex, ensuring they now utilize the new backend search methods.
- Cleaned up package dependencies by removing Convex from package.json and adjusting related configurations.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,7 @@
     "k": "npx kill-port 9099 5001 8181 9000 9199 9299 4000 8085",
     "find_port": "sudo lsof -i :3000"
   },
-  "dependencies": {
-    "convex": "^1.25.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/moment-timezone": "^0.5.30",
     "@types/node": "^22.13.1",
