--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -23,12 +23,12 @@
     "@types/cheerio": "^0.22.35",
     "@upstash/qstash": "^2.7.23",
     "@upstash/redis": "^1.34.4",
+    "@upstash/search": "^0.1.5",
     "@upstash/workflow": "^0.2.12",
     "ai": "^4.3.9",
     "api": "^5.0.7",
     "axios": "^1.3.3",
     "cheerio": "^1.1.2",
-    "convex": "^1.12.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "firebase-admin": "^13.3.0",
