--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/google": "^1.2.12",
     "@ai-sdk/openai": "^1.1.9",
     "@composio/core": "^0.1.36-next.13",
+    "@posthog/ai": "^6.2.0",
     "@sendgrid/mail": "^7.7.0",
     "@slack/webhook": "^6.1.0",
     "@sparticuz/chromium": "^138.0.1",
@@ -40,7 +41,7 @@
     "node-fetch": "^2.6.7",
     "openai": "^4.20.1",
     "playwright": "^1.54.1",
-    "posthog-node": "^5.6.0",
+    "posthog-node": "^5.8.1",
     "redis": "^4.7.0",
     "seamailer-nodejs": "^1.1.6",
     "uuid": "^10.0.0",
