--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
         "f": "cd frontend && npm run dev",
-        "b": "cd backend && npm run emu"
+        "b": "cd backend && ./kill-ports.sh && npm run emu"
     }
 }
